Changed autowired injection through bean to Constructor injection.